order-management/om-system-shipping/om-shipping-server/src/main/fabric8/networkpolicy.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: ${project.artifactId}-access
spec:
  podSelector:
    matchLabels:
      group: com.online.om
  ingress:
  - from:
    - podSelector:
        matchLabels:
          group: com.online.om
  egress:
  - to:
    - podSelector:
        matchLabels:
          access: "true"
